--- a/style.css
+++ b/style.css
@@ -2,6 +2,14 @@
   box-sizing: border-box;
 }
 
+:root {
+  --main-red-color: #e06262;
+}
+
+.main-red-color {
+  color: var(--main-red-color);
+}
+
 html {
   font-size: 10px;
 }
@@ -36,4 +44,28 @@ html {
 .frame {
   border: 1px solid #484848;
   height: 100%;
+  display: flex;
+  flex-direction: column;
+}
+
+.header {
+  display: flex;
+  align-items: flex-start;
+}
+
+.header-tittle {
+  flex: 1;
+  font-family: "Homemade Apple", sans-serif;
+  text-transform: lowercase;
+  font-size: 3.6 rem;
+  text-align: center;
+}
+
+.header-btn {
+  font-size: 1.8 rem;
+  font-family: "Bungee", sans-serif;
+  padding: 24px;
+  border: unset;
+  outline: unset;
+  background: unset;
 }
